RESOLVED FIXED269149
[UnifiedPDF] Selections should no longer be tracked when window loses focus
https://bugs.webkit.org/show_bug.cgi?id=269149
Summary [UnifiedPDF] Selections should no longer be tracked when window loses focus
Abrar Rahman Protyasha
Reported 2024-02-10 16:06:56 PST
Created attachment 469809 [details] Reproduction in MiniBrowser When the window loses focus, we should stop tracking existing selections. Right now this behavior manifests itself in us accidentally extending selections once we click on the PDF while a separate window is active. Refer to the attached repro video.
Attachments
Reproduction in MiniBrowser (3.16 MB, video/quicktime)
2024-02-10 16:06 PST, Abrar Rahman Protyasha
no flags
Radar WebKit Bug Importer
Comment 1 2024-02-10 16:07:05 PST
Abrar Rahman Protyasha
Comment 2 2024-02-10 23:52:10 PST
EWS
Comment 3 2024-02-11 02:26:17 PST
Committed 274441@main (8250b6757382): <https://commits.webkit.org/274441@main> Reviewed commits have been landed. Closing PR #24226 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.