[UnifiedPDF] Selections should no longer be tracked when window loses focus https://bugs.webkit.org/show_bug.cgi?id=269149 rdar://122722850

Reviewed by Tim Horton.

We were not formally distinguishing when a selection should be tracked,
with the wrong assumption that all selection tracking interactions would
start with a mousedown event. This means that we may pick up bogus
selections when we click on the PDF while out of focus, since that sends
a mousemove event to the plugin, which causes us to extend the selection
based on stale selection tracking data.

This commit corrects against such cases by ensuring we stay aware of
when a selection is being actively tracked. We only activate selection
tracking if we execute beginTrackingSelection, and explicitly deactivate
selection tracking if we receive a mouseup event or we have interacted
with a context menu.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::handleMouseEvent):
(WebKit::UnifiedPDFPlugin::handleContextMenuEvent):
(WebKit::UnifiedPDFPlugin::extendCurrentSelectionIfNeeded):
(WebKit::UnifiedPDFPlugin::continueTrackingSelection):

Canonical link: https://commits.webkit.org/274441@main